# learnedbench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bench.cpp
bench/: bench.cpp  bench.hpp  bench2d.cpp  bench_helper.h  bench_rsmi.cpp  query.hpp  test.cpp
benchmark/: CMakeLists.txt  bench.hpp  config.hpp
figures/: data_query_dist.ipynb  figure.ipynb  figure_dim.ipynb  figure_eps.ipynb  figure_n.ipynb
indexes/: base_index.hpp
indexes/learned/: flood.hpp  ifindex.hpp  learned_index.hpp  lisa.hpp  lisa2.hpp  mlindex.hpp  rsmi.hpp  zmindex.hpp
indexes/mlindex/: Readme.md
indexes/nonlearned/: ann.hpp  equal_depth_grid.hpp  fullscan.hpp  geos.hpp  kdtree.hpp  nonlearned_index.hpp  rtree.hpp  uniform_grid.hpp
indexes/pgm/: piecewise_linear_model.hpp
indexes/rsmi/: CMakeLists.txt  Constants.cpp  Constants.h  ExpRecorder.cpp  ExpRecorder.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  LeafNode.cpp  LeafNode.h  Mbr.cpp  Mbr.h  ModelTools.h  Node.cpp  Node.h  NodeExtend.cpp  NodeExtend.h  NonLeafNode.cpp  NonLeafNode.h  Point.cpp  Point.h  RSMI.cpp  RSMI.h  SearchHelper.h  SortTools.h
scripts/: data_generator.py  prepare_data.sh  rsmi.sh  run_exp.sh  run_exp_dim.sh  run_exp_eps.sh  run_exp_n.sh  run_exp_toronto.sh
utils/: CMakeLists.txt  common.hpp  constants.hpp  datagen.cpp  datautils.hpp  point.hpp  type.hpp
